--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
@@ -26,13 +27,12 @@
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
-"scripts": {
-  "start": "cross-env DANGEROUSLY_DISABLE_HOST_CHECK=true HOST=0.0.0.0 react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-}
-,
+  "scripts": {
+    "start": "cross-env DANGEROUSLY_DISABLE_HOST_CHECK=true HOST=0.0.0.0 react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "proxy": "http://localhost:8000",
   "eslintConfig": {
     "extends": [
