--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@mui/styled-engine-sc": "^6.1.9",
@@ -19,20 +20,22 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
-    "quill": "^2.0.3",
     "chart.js": "^4.4.7",
     "dayjs": "^1.11.13",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-chartjs-2": "^5.2.0",
+    "react-clock": "^5.1.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-time-picker": "^7.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
