--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "install": "^0.13.0",
+    "npm": "^10.9.2"
   }
 }
